# graphflow

./: .gitignore  AGENTS.md  PLAN_TO_PORT_TO_MONOREPO.md  Q&A.md  README.md  TIME_CAPSULE.md  schema.dbml
.claude/: launch.json
DO_NOT_READ/: INTEGRATION_PLAN.md  TDD.md  graphflow_v7.dbml
DO_NOT_READ_v2/: ELI5.md  TIMECAPSULE_ELI5.md  TIME_CAPSULE_v2.md  first_plan.md  how_it_runs.mermaid  second_plan.md  third_plan.md
agents/: 01-architecture.md  03-development-patterns.md  04-error-handling.md  05-typescript-rules.md  06-code-quality.md  07-correctness-safety.md  08-style-consistency.md  09-testing.md  11-domain-driven-design.md  deslop-bash.md  deslop-typescript.md  frontend-testing.md
backend/: README.md  biome.jsonc  package-lock.json  package.json  vitest.config.mjs
backend_typescript/: .gitignore  knip.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.lib.json
frontend/: .env.example  CLAUDE.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
legacy/: cli.py  pyproject.toml
legacy/api/: deps.py  main.py  schemas.py
legacy/api/routes/: engagements.py
legacy/engine/: activities.py  canonical.py  context.py  registry.py  runtime.py  storage.py  temporal_workflows.py
legacy/sample_docs/: bh_schwab.txt  fidelity.txt
legacy/tests/: test_api_crud.py  test_db.py
legacy/workflows/: tax_demo_workflow.py
typescript_StyleAndRules/: .gitattributes  .yarnrc.yml  AGENTS.md  biome.generated.jsonc  biome.jsonc  eslint.config.mjs  knip.json  nx.json  package.json  tsconfig.json  vitest.config.mjs  (+3 more)
(+157 files in other folders)
