[project]
name = "graphflow"
version = "0.1.0"
description = "graphflow - engagement-scoped memoized workflow engine over Temporal + SQLite"
requires-python = ">=3.11,<3.14"
dependencies = [
    "temporalio>=1.9,<2",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: end-to-end API tests over real Temporal Cloud (skipped without TEMPORAL_API_KEY)",
]
asyncio_default_fixture_loop_scope = "function"
